# apply

./: CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
apply/: __init__.py  apply.py
apply/tests/: test_apply.py
docs/: conf.py  index.rst
docs/moved/: index.html
