[metadata]
name = apply
version = 1.8
description = An apply function for Python 2 and 3
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = apply, read, write, property, properties
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/apply
project_urls =
    Documentation = https://apply.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
include_package_data = false
zip_safe = false
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    apply.tests

[options.extras_require]
docs =
    sphinx == 5.3.0
    sphinx-rtd-theme == 1.0.0

[egg_info]
tag_build = dev0

[bdist_wheel]
universal = true
